force-app/main/default/objects/ScriptConfig__c/ScriptConfig__c.object-meta.xml
<CustomObject>
    <description>oggetto per configurare la capability &quot;Gestione Script&quot;.  Ogni record rappresenta un processo di script ai quali vengono agganciati con una lookup Hierarchy (ad uno o più livelli) e contengono meta-informazioni (come il testo, la formattazione, l&apos;oggetto in input, etc) che le logiche implementate utilizzeranno per costruire dinamicamente il flusso dello script</description>
    <label>Configurazione Script</label>
    <nameField>
        <label>Configurazione Script Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configurazione Scripts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>