force-app/main/default/objects/ScriptConfig__c/fields/CheckVisibility__c.field-meta.xml
<CustomField>
    <fullName>CheckVisibility__c</fullName>
    <description>campo testo, lista di condizioni booleane campo==/!=stringa separati da ; se popolata le condizioni vengono valutate a run time sul record di contesto per decidere se mostrare o meno questa particolare schermata</description>
    <label>Condizioni Visualizzazione</label>
    <length>255</length>
    <type>Text</type>
</CustomField>