force-app/main/default/objects/ScriptConfig__c/fields/ChildRelationName__c.field-meta.xml
<CustomField>
    <fullName>ChildRelationName__c</fullName>
    <description>This formula Output the &quot;Relationship Name&quot; from which &quot;Gestione Script CB&quot; loops  to child record.

This Formula Works as a Map.
Key is a value from &quot;ContextObjectFormula__c&quot; PickList (labels of objects).
Value must be the API Relationship Name of the child relation you want to Loop for.

To add a new pair key-&gt;value just replace inside the Case Function the empty string &lt;&lt;&quot;&quot; &gt;&gt; with 
&quot;key&quot;, &quot;value&quot;, &quot;&quot;.

Every update on the formula output instantly will change the apex class behaviour without need to edit it.</description>
    <formula>CASE( ContextObjectFormula__c, &quot;Order&quot;, &quot;Orders&quot;, &quot;Script&quot;, &quot;ChildSections&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome Relazione</label>
    <type>Text</type>
</CustomField>