force-app/main/default/objects/ScriptConfig__c/fields/ContextObject__c.field-meta.xml
<CustomField>
    <fullName>ContextObject__c</fullName>
    <description>Picklist selezione oggetto di riferimento, contiene una lista di oggetti preconcordata, nelle sezioni lista serve ad identificare il nome della relazione</description>
    <label>Oggetto di Riferimento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Order</fullName>
            </value>
            <value>
                <fullName>Case</fullName>
            </value>
            <value>
                <fullName>CampaignMember</fullName>
            </value>
            <value>
                <fullName>Activity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>