force-app/main/default/objects/ScriptConfig__c/fields/IsChildLoopEvaluated__c.field-meta.xml
<CustomField>
    <fullName>IsChildLoopEvaluated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Nelle sezioni Lista, indica quando le logiche dinamiche della sezione corrente non verranno valutate sull&apos;oggetto di contesto ma per ogni figlio dell&apos;oggetto di contesto.</description>
    <label>Loop Sui Record Figli</label>
    <type>Checkbox</type>
</CustomField>