force-app/main/default/objects/ScriptConfig__c/fields/LabelOption1__c.field-meta.xml
<CustomField>
    <fullName>LabelOption1__c</fullName>
    <description>Negli script decisionali, in cui è richiesto a run time di effettuare una scelta che influenzerà la schermata successiva, qui si inserisce la label della prima scelta.</description>
    <label>Label Opzione 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>