force-app/main/default/objects/ScriptConfig__c/fields/LabelOption2__c.field-meta.xml
<CustomField>
    <fullName>LabelOption2__c</fullName>
    <label>Label Opzione 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>