force-app/main/default/objects/ScriptConfig__c/fields/LabelOption3__c.field-meta.xml
<CustomField>
    <fullName>LabelOption3__c</fullName>
    <description>label scelta 3</description>
    <label>Label Opzione 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>