force-app/main/default/objects/ScriptConfig__c/fields/NextSection__c.field-meta.xml
<CustomField>
    <fullName>NextSection__c</fullName>
    <inlineHelpText>Indice della pagina successiva</inlineHelpText>
    <label>Sezione Successiva</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>