force-app/main/default/objects/ScriptConfig__c/fields/ScriptType__c.field-meta.xml
<CustomField>
    <fullName>ScriptType__c</fullName>
    <label>Tipologia Script</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Processo</fullName>
            </value>
            <value>
                <fullName>Sezione decisionale</fullName>
            </value>
            <value>
                <fullName>Sezione lista</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>