force-app/main/default/objects/ScriptConfig__c/fields/SectionLabel__c.field-meta.xml
<CustomField>
    <fullName>SectionLabel__c</fullName>
    <description>Nel singolo record di sezione, indica il titolo che sarà mostrato quando viene visualizzata questa sezione</description>
    <label>Label Sezione</label>
    <length>255</length>
    <type>Text</type>
</CustomField>