force-app/main/default/objects/ScriptConfig__c/fields/SectionOrder__c.field-meta.xml
<CustomField>
    <fullName>SectionOrder__c</fullName>
    <description>Numero Intero, utilizzato per matchare le Sezioni.</description>
    <label>Ordinamento Sezione</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>