force-app/main/default/objects/ScriptConfig__c/fields/TextScript__c.field-meta.xml
<CustomField>
    <fullName>TextScript__c</fullName>
    <description>Campo Rich Text Area, è il campo in cui viene configurato il testo di quella particolare sezione.</description>
    <label>Testo Script</label>
    <length>131000</length>
    <type>Html</type>
</CustomField>