force-app/main/default/objects/ScriptConfig__c/recordTypes/HDT_RT_DecisionalSection.recordType-meta.xml
<RecordType>
    <fullName>HDT_RT_DecisionalSection</fullName>
    <active>true</active>
    <label>Sezione Decisionale</label>
</RecordType>