force-app/main/default/objects/ScriptConfig__c/recordTypes/HDT_RT_ListSection.recordType-meta.xml
<RecordType>
    <fullName>HDT_RT_ListSection</fullName>
    <active>true</active>
    <label>Sezione Lista</label>
</RecordType>