force-app/main/default/objects/ScriptConfig__c/recordTypes/HDT_RT_Processo.recordType-meta.xml
<RecordType>
    <fullName>HDT_RT_Processo</fullName>
    <active>true</active>
    <label>Processo</label>
</RecordType>