force-app/main/default/objects/ScriptConfig__c/validationRules/CheckVisibilityMixedOperator.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckVisibilityMixedOperator</fullName>
    <active>true</active>
    <errorConditionFormula>AND( CONTAINS(CheckVisibility__c, &apos;AND&apos;),CONTAINS(CheckVisibility__c, &apos;OR&apos;) )</errorConditionFormula>
    <errorDisplayField>CheckVisibility__c</errorDisplayField>
    <errorMessage>Non è possibile combinare AND e OR. Utilizzare solo AND o solo OR</errorMessage>
</ValidationRule>