force-app/main/default/objects/ScriptConfig__c/validationRules/Decisional_Loop.validationRule-meta.xml
<ValidationRule>
    <fullName>Decisional_Loop</fullName>
    <active>true</active>
    <errorConditionFormula>AND(IsChildLoopEvaluated__c, ISPICKVAL(ScriptType__c, &apos;Decisionale&apos;))</errorConditionFormula>
    <errorDisplayField>IsChildLoopEvaluated__c</errorDisplayField>
    <errorMessage>Il Loop sui Record figli non è supportato per la logica Decisionale</errorMessage>
</ValidationRule>