force-app/main/default/objects/ScriptConfig__c/listViews/Processi.listView-meta.xml
<ListView>
    <fullName>Processi</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ScriptType__c</field>
        <operation>equals</operation>
        <value>Processo</value>
    </filters>
    <label>Processi</label>
</ListView>